Updates from Overleaf

--- a/references.bib
+++ b/references.bib
@@ -727,3 +727,193 @@ Publisher: JMIR Publications Inc., Toronto, Canada},
 	pages = {2020.07.18.20156653},
 	file = {Full Text PDF:/home/michael/Zotero/storage/UIMDZ4XA/Allen et al. - 2020 - Estimation of stroke outcomes based on time to thr.pdf:application/pdf},
 }
+
+
+@article{chen_dual_2023,
+	title = {Dual {Antiplatelet} {Therapy} vs {Alteplase} for {Patients} {With} {Minor} {Nondisabling} {Acute} {Ischemic} {Stroke}: {The} {ARAMIS} {Randomized} {Clinical} {Trial}},
+	volume = {329},
+	issn = {0098-7484},
+	shorttitle = {Dual {Antiplatelet} {Therapy} vs {Alteplase} for {Patients} {With} {Minor} {Nondisabling} {Acute} {Ischemic} {Stroke}},
+	url = {https://doi.org/10.1001/jama.2023.7827},
+	doi = {10.1001/jama.2023.7827},
+	number = {24},
+	urldate = {2024-08-07},
+	journal = {JAMA},
+	author = {Chen, Hui-Sheng and Cui, Yu and Zhou, Zhong-He and Zhang, Hong and Wang, Li-Xia and Wang, Wei-Zhong and Shen, Li-Ying and Guo, Li-Yan and Wang, Er-Qiang and Wang, Rui-Xian and Han, Jing and Dong, Yu-Ling and Li, Jing and Lin, Yong-Zhong and Yang, Qing-Cheng and Zhang, Li and Li, Jing-Yu and Wang, Jin and Xia, Lei and Ma, Guang-Bin and Lu, Jiang and Jiang, Chang-Hao and Huang, Shu-Man and Wan, Li-Shu and Piao, Xiang-Yu and Li, Zhuo and Li, Yan-Song and Yang, Kui-Hua and Wang, Duo-Lao and Nguyen, Thanh N. and {ARAMIS Investigators}},
+	month = jun,
+	year = {2023},
+	pages = {2135--2144},
+	file = {Accepted Version:/home/michael/Zotero/storage/96CJ5WU5/Chen et al. - 2023 - Dual Antiplatelet Therapy vs Alteplase for Patient.pdf:application/pdf;Snapshot:/home/michael/Zotero/storage/NGVUSULP/2806532.html:text/html},
+}
+
+@article{zhang_intravenous_2024,
+	title = {Intravenous {Alteplase} {Versus} {Best} {Medical} {Therapy} for {Patients} {With} {Minor} {Stroke}: {A} {Systematic} {Review} and {Meta}-{Analysis}},
+	volume = {55},
+	shorttitle = {Intravenous {Alteplase} {Versus} {Best} {Medical} {Therapy} for {Patients} {With} {Minor} {Stroke}},
+	url = {https://www.ahajournals.org/doi/10.1161/STROKEAHA.123.045495},
+	doi = {10.1161/STROKEAHA.123.045495},
+	number = {4},
+	urldate = {2024-07-31},
+	journal = {Stroke},
+	author = {Zhang, Yang and Lv, Tian and Nguyen, Thanh N. and Wu, Simiao and Li, Zhi and Bai, Xue and Chen, Dan and Zhao, Chuansheng and Lin, Wanyi and Chen, Shiqin and Sui, Yi},
+	month = apr,
+	year = {2024},
+	pages = {883--892},
+}
+
+@article{braksick_thrombolysis_2024,
+	title = {Thrombolysis {Is} {Not} {Indicated} for {Minor} {Strokes} {If} {They} {Are} {Truly} {Nondisabling}},
+	volume = {55},
+	url = {https://www.ahajournals.org/doi/10.1161/STROKEAHA.124.046549},
+	doi = {10.1161/STROKEAHA.124.046549},
+	number = {4},
+	urldate = {2024-07-31},
+	journal = {Stroke},
+	author = {Braksick, Sherri A. and Rabinstein, Alejandro A.},
+	month = apr,
+	year = {2024},
+	pages = {893--894},
+	file = {Full Text PDF:/home/michael/Zotero/storage/DX97AVY8/Braksick and Rabinstein - 2024 - Thrombolysis Is Not Indicated for Minor Strokes If.pdf:application/pdf},
+}
+
+@article{akinrinmade_artificial_nodate,
+	title = {Artificial {Intelligence} in {Healthcare}: {Perception} and {Reality}},
+	volume = {15},
+        year = {2023}, 
+	issn = {2168-8184},
+	shorttitle = {Artificial {Intelligence} in {Healthcare}},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10587915/},
+	doi = {10.7759/cureus.45594},
+	number = {9},
+	urldate = {2024-08-07},
+	journal = {Cureus},
+	author = {Akinrinmade, Abidemi O and Adebile, Temitayo M and Ezuma-Ebong, Chioma and Bolaji, Kafayat and Ajufo, Afomachukwu and Adigun, Aisha O and Mohammad, Majed and Dike, Juliet C and Okobi, Okelue E},
+	pmid = {37868407},
+	pmcid = {PMC10587915},
+	pages = {e45594},
+	file = {PubMed Central Full Text PDF:/home/michael/Zotero/storage/NZKXLUZH/Akinrinmade et al. - Artificial Intelligence in Healthcare Perception .pdf:application/pdf},
+}
+
+@techreport{royal_college_of_emergency_medicine_acute_2015,
+	title = {Acute {Ischaemic} {Stroke} and {Intravenous} {Thrombolysis} {A} position statement},
+	url = {https://rcem.ac.uk/wp-content/uploads/2021/10/Acute_Ischaemic_Stroke_and_Intravenous_Thrombolysis_Dec2015.pdf.},
+	urldate = {2024-08-06},
+	author = {Royal College of Emergency Medicine},
+	year = {2015},
+	file = {_.pdf:/home/michael/Zotero/storage/JSVERAS4/_.pdf:application/pdf},
+}
+
+@article{ivers_audit_2012,
+	title = {Audit and feedback: effects on professional practice and healthcare outcomes},
+	issn = {1465-1858},
+	shorttitle = {Audit and feedback},
+	url = {https://www.cochranelibrary.com/cdsr/doi/10.1002/14651858.CD000259.pub3/full},
+	doi = {10.1002/14651858.CD000259.pub3},
+	language = {en},
+	number = {6},
+	urldate = {2022-07-12},
+	journal = {Cochrane Database of Systematic Reviews},
+	author = {Ivers, Noah and Jamtvedt, Gro and Flottorp, Signe and Young, Jane M. and Odgaard‐Jensen, Jan and French, Simon D. and O'Brien, Mary Ann and Johansen, Marit and Grimshaw, Jeremy and Oxman, Andrew D.},
+	year = {2012},
+	note = {Publisher: John Wiley \& Sons, Ltd},
+	file = {Ivers et al. - 2012 - Audit and feedback effects on professional practi.pdf:/home/michael/Zotero/storage/W2WL8WM5/Ivers et al. - 2012 - Audit and feedback effects on professional practi.pdf:application/pdf},
+}
+
+@article{baker_tailored_nodate,
+	title = {Tailored interventions to address determinants of practice - {Baker}, {R} - 2015 {\textbar} {Cochrane} {Library}},
+	issn = {1465-1858},
+	url = {https://www.cochranelibrary.com/cdsr/doi/10.1002/14651858.CD005470.pub3/full},
+	language = {en-US},
+	urldate = {2024-08-07},
+	author = {Baker, Richard and Camosso‐Stefinovic, Janette and Gillies, Clare and Shaw, Elizabeth J. and Cheater, Francine and Flottorp, Signe and Robertson, Noelle and Wensing, Michel and Fiander, Michelle and Eccles, Martin P. and Godycki‐Cwirko, Maciek and Lieshout, Jan van and Jäger, Cornelia},
+}
+
+
+@article{scott_multilevel_2013,
+	title = {A multilevel intervention to increase community hospital use of alteplase for acute stroke ({INSTINCT}): a cluster-randomised controlled trial},
+	volume = {12},
+	issn = {1474-4465},
+	shorttitle = {A multilevel intervention to increase community hospital use of alteplase for acute stroke ({INSTINCT})},
+	doi = {10.1016/S1474-4422(12)70311-3},
+	language = {eng},
+	number = {2},
+	journal = {The Lancet. Neurology},
+	author = {Scott, Phillip A. and Meurer, William J. and Frederiksen, Shirley M. and Kalbfleisch, John D. and Xu, Zhenzhen and Haan, Mary N. and Silbergleit, Robert and Morgenstern, Lewis B. and {INSTINCT Investigators}},
+	month = feb,
+	year = {2013},
+	pmid = {23260188},
+	pmcid = {PMC3939784},
+	keywords = {Adult, Case-Control Studies, Female, Fibrinolytic Agents, Follow-Up Studies, Hospitals, Community, Humans, Male, Michigan, Outcome Assessment, Health Care, Retrospective Studies, Stroke, Time Factors, Tissue Plasminogen Activator, Treatment Outcome},
+	pages = {139--148},
+	file = {Accepted Version:/home/michael/Zotero/storage/RUJ3PBHS/Scott et al. - 2013 - A multilevel intervention to increase community ho.pdf:application/pdf},
+}
+
+@misc{sentinel_national_stroke_audit_programme_ssnap_2023,
+        journal={},
+	title = {{SSNAP} {Annual} {Results} {Portfolio} ({April} 2022 to {March} 2023)},
+	url = {https://www.strokeaudit.org/Documents/National/Clinical/Apr2022Mar2023/Apr2022Mar2023-AnnualReport.aspx.},
+	urldate = {2023-12-10},
+	author = {{Sentinel National Stroke Audit Programme,}},
+	year = {2023},
+}
+
+@misc{cooksey_review_2006,
+	title = {A review of {UK} health research funding},
+	url = {https://www.gov.uk/government/publications/a-review-of-uk-health-research-funding},
+	abstract = {This document contains the following information: A review of UK health research funding},
+	language = {en},
+	urldate = {2024-08-07},
+	journal = {GOV.UK},
+	author = {Cooksey, D},
+	year = {2006},
+	file = {A review of UK health research funding.pdf:/home/michael/Zotero/storage/RF4PTGR3/A review of UK health research funding.pdf:application/pdf;Snapshot:/home/michael/Zotero/storage/8RLGF9X5/a-review-of-uk-health-research-funding.html:text/html},
+}
+
+
+@article{elhabr_predicting_2021,
+	title = {Predicting 90-day modified {Rankin} {Scale} score with discharge information in acute ischaemic stroke patients following treatment},
+	volume = {3},
+	copyright = {© Author(s) (or their employer(s)) 2021. Re-use permitted under CC BY-NC. No commercial re-use. See rights and permissions. Published by BMJ.. http://creativecommons.org/licenses/by-nc/4.0/This is an open access article distributed in accordance with the Creative Commons Attribution Non Commercial (CC BY-NC 4.0) license, which permits others to distribute, remix, adapt, build upon this work non-commercially, and license their derivative works on different terms, provided the original work is properly cited, appropriate credit is given, any changes made indicated, and the use is non-commercial. See: http://creativecommons.org/licenses/by-nc/4.0/.},
+	issn = {2632-6140},
+	url = {https://neurologyopen.bmj.com/content/3/1/e000177},
+	doi = {10.1136/bmjno-2021-000177},
+	language = {en},
+	number = {1},
+	urldate = {2024-08-07},
+	journal = {BMJ Neurology Open},
+	author = {ElHabr, Andrew K. and Katz, Jeffrey M. and Wang, Jason and Bastani, Mehrad and Martinez, Gabriela and Gribko, Michele and Hughes, Danny R. and Sanelli, Pina},
+	month = jun,
+	year = {2021},
+	note = {Publisher: BMJ Specialist Journals
+Section: Original research},
+	keywords = {stroke},
+	pages = {e000177},
+	file = {Full Text PDF:/home/michael/Zotero/storage/HPQ3JYP3/ElHabr et al. - 2021 - Predicting 90-day modified Rankin Scale score with.pdf:application/pdf},
+}
+
+
+@article{ovbiagele_disability_2010,
+	title = {Disability status at 1 month is a reliable proxy for final ischemic stroke outcome},
+	volume = {75},
+	issn = {1526-632X},
+	doi = {10.1212/WNL.0b013e3181eee426},
+	language = {eng},
+	number = {8},
+	journal = {Neurology},
+	author = {Ovbiagele, Bruce and Lyden, Patrick D. and Saver, Jeffrey L. and {VISTA Collaborators}},
+	month = aug,
+	year = {2010},
+	pmid = {20733143},
+	pmcid = {PMC2931650},
+	keywords = {Adolescent, Adult, Age Distribution, Aged, Aged, 80 and over, Brain Ischemia, Cohort Studies, Disability Evaluation, Female, Humans, Male, Middle Aged, Outcome Assessment, Health Care, Predictive Value of Tests, Prognosis, Sex Distribution, Stroke, Young Adult},
+	pages = {688--692},
+	file = {Full Text:/home/michael/Zotero/storage/5PDNBH5K/Ovbiagele et al. - 2010 - Disability status at 1 month is a reliable proxy f.pdf:application/pdf},
+}
+
+@techreport{sentinel_stroke_national_audit_programme_sentinel_2021,
+	title = {Sentinel {Stroke} {National} {Audit} {Programme} ({SSNAP}) {Annual} {Thrombectomy} {Report}},
+	url = {https://www.strokeaudit.org/Results2/Clinical-audit/National-Results.aspx},
+	urldate = {2024-08-06},
+	author = {Sentinel Stroke National Audit Programme},
+	year = {2021},
+}
