--- a/sections/03_intro.tex
+++ b/sections/03_intro.tex
@@ -30,7 +30,7 @@ Specific objectives for the current study were:
 
     \item \textbf{Prediction of outcomes} (including benefit and risk of thrombolysis) at an individual patient level.
 
-    \item \textbf{Inclusion of a health economics model}, to convert outcomes to Quality of Life Years (QALYs).
+    \item \textbf{Inclusion of a health economics model}, to convert outcomes to quality-adjusted life years (QALYs).
 
     \item \textbf{Improve model transparency and explainability} by 1) model simplification through feature selection, and to 2) the addition of Shapley values to show the contribution of individual features to the prediction \cite{aas_explaining_2020}.
 
