--- a/sections/05_paper_overview.tex
+++ b/sections/05_paper_overview.tex
@@ -40,7 +40,7 @@ Explainable machine learning model to study decision-to-treat with thrombolysis 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Paper 3: Thrombolysis: Are the results from the clinical trial meta-analysis seen in real life outcomes?  A machine learning study of the UK stroke registry.\cite{pearn_are_2024}}
+\subsection{Paper 3: Thrombolysis: Are the results from the clinical trial meta-analysis seen in real life outcomes?  A machine learning study of the UK stroke registry.\cite{pearn_thrombolysis_2024}}
 
 \textbf{Study type and population}
 
