--- a/sections/13_paper_3.tex
+++ b/sections/13_paper_3.tex
@@ -1,4 +1,4 @@
-\section{Paper 3 highlights: Thrombolysis: Are the results from the clinical trial meta-analysis seen in real life outcomes?  A machine learning study of the UK stroke registry.\cite{pearn_are_2024}}\label{sec:paper_3}
+\section{Paper 3 highlights: Thrombolysis: Are the results from the clinical trial meta-analysis seen in real life outcomes?  A machine learning study of the UK stroke registry.\cite{pearn_thrombolysis_2024}}\label{sec:paper_3}
 
 \subsection{Objective}
 
