--- a/sections/15_paper_5.tex
+++ b/sections/15_paper_5.tex
@@ -18,7 +18,7 @@ This work combined four models:
 
     \item \textit{Patient pathway flow}: Monte-Carlo simulation was used to model the flow of patients through the emergency stroke pathway at each hospital, taking into account both average speeds and variation. When examining the effect of improving patient flow, clinical outcome is predicted as the number of \textit{good outcomes} (mRS 0-1) per 1,000 admissions using a previously described mathematical model \cite{allen_estimation_2020}.
 
-    \item \textit{Lifetime economic model}: A model predicting life expectancy, Quality of Life Years (QALYs), and NHS care costs after stroke, based on age, sex, and disability at discharge\cite{mcmeekin_lifetime_2024}.
+    \item \textit{Lifetime economic model}: A model predicting life expectancy, quality-adjusted life years (QALYs), and NHS care costs after stroke, based on age, sex, and disability at discharge\cite{mcmeekin_lifetime_2024}.
     
 \end{enumerate}
 
