--- a/sections/21_discussion.tex
+++ b/sections/21_discussion.tex
@@ -1,7 +1,27 @@
 \section{Discussion}
 
-\subsection{Principle findings}
+\subsection{Principle Findings}
 
 Principle findings are outlined in section \ref{sec:papers}.
 
-\subsection{Clinical discussion}
+\subsection{Clinical Synopsis and Implications}
+
+This body of work has used the power of big data from the UK’s comprehensive, prospective registry of hospitalised stroke, SSNAP, combined with new and sophisticated analytical techniques involving machine learning supported by qualitative research, to investigate one of the persisting controversies of acute stroke treatment over the last quarter-century – why, after such a long time, is there still such huge variation in the use of one of the most important disability-reducing treatments available for acute stroke? We are now long past the 25\textsuperscript{th} anniversary of the publication of the landmark NINDS trial which was the first to demonstrate the benefits of reperfusion treatment with alteplase within 3 hours of stroke onset, and ten years on from the decisive meta-analysis of over 6,700 patients published in the Lancet \cite{emberson_effect_2014}, yet the failure of the global clinical community to fully embrace the potential of treatment to reduce the most common cause of adult-onset disability worldwide remains at best an enigma, and at worst a damning failure of implementation.
+
+One of the most common reasons cited for variation in clinical practice in thrombolysis is ‘exceptionalism’, or what we have termed the ‘special hospital fallacy’. Clinicians often cite (usually based on hearsay rather than evidence) that the failure of their hospital to fully implement the findings of research and the recommendations of national expert bodies results from the unique nature of their local population, and the manner in which they differ from the highly selected participants in randomised controlled trials predominantly conducted in well resourced and large academic centres. Real-world research with a very large and comprehensive dataset enables these objections to be directly addressed, and our generalisable finding that the majority of between-hospital variation results not from differences in the local population but from differences in within-hospital factors, including propensity to thrombolyse, is key to neutralising what for many is seen as the justification for inaction. We have, for example, shown a three-fold variation in thrombolysis use in patients presenting to hospital within four hours of onset according to whether the onset time in precisely known or witnessed compared to being a ‘best estimate’. This clearly illustrates variation in the extent to which any given hospital team is prepared to thrombolyse based on an estimated onset time – one aspect of a wider phenomenon best characterised as ‘willingness to thrombolyse’. This phenomenon is particularly evident when we examine the probability of thrombolysis being administered in any particular site to patients who are varying from the ‘ideal’ (often described, as it was in our qualitative study, as the ‘barn door’ case), often in relatively small ways. The willingness of different stroke teams to thrombolyse these less-than-ideal cases is the principal source of variation in rates between hospital sites – particularly with reference to whether the patient was milder, or with more pre-stroke disability, or if the onset time was based on a best estimate rather than being precisely known or witnessed. It is therefore significant that our health economic work linked to pathway simulation and optimisation has shown that sites with a greater willingness to thrombolyse are still delivering greater disability reductions and health economic benefits from their higher levels of thrombolysis use among less-than-ideal patients – using real-world data to refute the allegation that such sites are merely administering alteplase to people who do not stand to benefit or who do not conform to the more strictly applied eligibility of the original randomised trials. Indeed this work demonstrates that there is still significant residual population benefit to be gained from the greater use of thrombolysis in patients scanned within 4 hours and 15 minutes of onset – half of such patients who were not treated still stood to gain net benefit in reduced discharge disability, and a reasonable estimate of the proportion of this early-presenting cohort predicted to benefit from thrombolysis is 60\% - when current thrombolysis rates among patients presenting within 4 hours of onset vary seven-fold between 7\% and 49\%.
+
+Another barrier to wider implementation is the perception that real-world use will fail to deliver the same benefits that were shown in the strictly regulated and controlled environment of a clinical trial. It is certainly the case that typical stroke patients in the UK and elsewhere are older and with more severe pre-stroke disability than those selected into trials, many of which specified the exclusion of patients with a pre-stroke disability any higher than 1 on the modified Rankin scale (mRS). Prospective registries play a crucial role in scrutinising the implementation of the primary trial evidence into real-world practice, and so it is an important conclusion from the advanced analysis contained in this work that thrombolysis is indeed delivering the anticipated benefits for large numbers of patients every year. We have observed a significant increase in the odds of achieving a good outcome (same-or-better mRS without an increased risk of severe disability or death) with thrombolysis at any threshold of mRS, despite the fact that patients in the SSNAP registry are less ideal in their clinical characteristics and are treated later than typical trial participants, when the absolute benefits would be expected to be reduced. There is significant reassurance available to clinicians and patients that the use of alteplase in usual clinical practice is indeed delivering the benefits expected from meta-analysis of the primary trials.
+
+This translation into everyday clinical practice extends to cost-effectiveness. In extending the pathway simulation work with a health economic analysis, we have shown that current use of thrombolysis in the UK is expected to result in a 6.8\% absolute increase in the proportion of patients with a discharge mRS of 0-2 at a net cost per QALY of £1,927. By current ‘willingness to pay’ thresholds (customarily £30,000 per QALY for any non-cancer treatment in the UK) this would indicate that the NHS is being extremely cost-effective in reducing lifelong stroke-related disability through the use of thrombolysis. Furthermore, because high-thrombolysing sites are delivering the treatment to more patients, this clinical and cost-effectiveness correspondingly increases, with a net annual saving of over £20,000 per 1,000 stroke admissions at a ‘benchmark’ site. If the willingness to thrombolyse seen in the top quartile of sites were reproduced across the NHS, this would save at least £2 million/year, principally through reductions in the costs of long term disability that are usually borne by families and by social care.
+
+This cost-effectiveness also encompasses the tendency of benchmark hospitals to treat more patients with minor stroke (NIHSS 0-4). The effectiveness of thrombolysis in minor, or in non-disabling, stroke is the subject of current debate, with a recent Chinese study of alteplase versus dual antiplatelet therapy in ‘non-disabling’ stroke\cite{chen_dual_2023} proving negative and a subsequent systematic review and meta-analysis indicating that thrombolysis does not improve disability outcomes or functional prognosis for patients with minor stroke \cite{zhang_intravenous_2024}. A similar effect is observed in our work, with a marginal increase in the proportion of those patients who present with NIHSS 0-4 that achieve a discharge mRS of 0-2 being counterbalanced by an equivalent marginal increase in the proportion with a discharge mRS of 5 or 6. We have, however, also demonstrated that there is no single feature, including the total or individual components of the NIHSS, which reliably discriminates those patients who would or would not benefit from thrombolysis. This reflects the heterogeneity of stroke impairments and presentations, including the poorer relationship between NIHSS and outcomes in the posterior circulation, and underlines the observation that when considering whether a stroke is going to prove to be disabling or non-disabling in any individual patient, the NIHSS score cannot be the sole consideration\cite{braksick_thrombolysis_2024}. Given the overall net benefit from thrombolysis in high-thrombolysing sites demonstrated in our study, this does suggest that frontline clinicians are, in general, making appropriate decisions about treatment based on disability potential in patients presenting with NIHSS 0-4. There may well be more that can be done to improve discrimination in this group of patients using other parameters not measured in SSNAP (frailty, for example, or the inclusion of imaging data) that can refine decision-making for these patients. In the absence of a single feature that can readily discriminate between those who would and would not benefit at this milder end of the severity scale, the clinician must always primarily address the question ‘For this patient, is this minor stroke still going to be disabling?’
+
+These and other ambiguities and uncertainties in clinical practice and in the implementation of the research data are amply illustrated by the findings from the nested qualitative study. The findings from the machine learning work in this project will hopefully help to address the scepticism encountered in the qualitative work about the credibility of machine learning, and clinicians are understandably wary when it comes to computer modelling seeking to dissect and explain ‘clinical judgement’. Hesitancy regarding the use of ‘artificial intelligence’ in other areas of clinical practice is widely described, and it is valuable learning from the qualitative work that there can be no inherent assumption that computerised methods, no matter how sophisticated, will be welcomed with open arms by busy clinicians who remain to be persuaded of the added value of these techniques\cite{akinrinmade_artificial_nodate}. Scepticism about the benefits and risks of thrombolysis also extended into the historical reluctance among some emergency medicine physicians to accept the twenty-five year heritage of scientific research into the treatment both in Europe and the US, manifested by cautious statements of support from professional bodies such as the Royal College of Emergency Medicine\cite{royal_college_of_emergency_medicine_acute_2015}. The extent to which this reluctance contributes to the overall variation in thrombolysis practice and treatment rates around the UK is debatable – there are relatively few sites in the UK where emergency physicians are primarily responsible for the delivery of thrombolysis, although one of these was one of the three participating centres in the ethnographic research. Certainly the degree of observed variation in rates is far greater than could be accounted for purely by uncertainty among emergency physicians, and indicates much wider uncertainty among mainstream stroke physicians. Using large cohorts of patients from a national stroke registry, collected over several years, to provide objective analysis of clinical variation can be one method for highlighting the causes and consequences of such variation, but it is well recognised that clinical practice change is often frustratingly slow-moving and requires a multidimensional approach – there is no ‘silver bullet’. However, the bespoke nature of the estimates of additional treated patients and the corresponding gains in favourable outcomes provided by the pathway analysis work, and now freely available to all teams on the Web App at https://stroke-predictions.streamlit.app/, does address at least two of the factors known to promote practice change identified by systematic review \cite{ivers_audit_2012, baker_tailored_nodate} – the perceived relevance of the change in practice to the clinicians’ specific circumstances (through bespoke estimates based on their own local population), and the direct link to better patient outcomes, rather than intermediate or surrogate measures such as the thrombolysis rate as an end in itself. However, even with this improved quality improvement (QI) methodology, the qualitative research revealed that sites still felt they lacked the human and financial resources to fully exploit the QI potential of SAMueL-2, an observation that reiterates the importance of providing the effort and energy needed to shift the dial from the status quo in complex organisations. Projects specific to increasing thrombolysis use through the use of multicomponent interventions addressing barriers to use have proved disappointingly modest in their effects  \cite{scott_multilevel_2013}. Given how little we have seen the overall thrombolysis rate in England, Wales and Northern Ireland change over the last 10 years or more \cite{sentinel_national_stroke_audit_programme_ssnap_2023}, it is quite apparent that substantial and sustained support is required to effect the sort of changes that this research indicates are potentially deliverable. Over that time the clinical community may have appeared rather too content to inhabit that ‘gap’ in delivery (the long-recognised ‘second gap of translation’ of the 2006 Cooksey Review\cite{cooksey_review_2006}), resulting in the long term failure to deliver to patients the fullest extent of the benefits from biomedical advances such as thrombolysis. What this work does, based as it is on real-world patients treated over recent years in the NHS, is highlight that there remains considerable health gain available simply through the more effective implementation of existing evidence, in parallel with the implementation of other advances in reperfusion for ischaemic stroke and in the management of haemorrhagic stroke. The complete implementation of treatments that we already know are highly effective and cost-effective is one of the principal means by which we shall reduce the huge burden on patients, their families and on wider society from the increasing prevalence of stroke-related disability around the world. This research shows that, quite apart from the effort required to implement newer ‘game-changing’ treatment such as thrombectomy, we should simply be doing more thrombolysis in more patients more quickly, and that if we were to do so, guided by realistic and bespoke modelled estimates of what is achievable and deliverable at each site, we could be confident that we will see less disability, better outcomes for our patients and reduced costs to society. There can be no stronger argument for the fullest possible implementation of the available evidence.
+
+\subsection{Limitations}
+
+The limitations of this work need to be considered. The interpretation of observational data must always be balanced by an awareness of the potential pitfalls in the analysis of non-randomised data. In these studies these risks are significantly mitigated by the size of the dataset, and by the comprehensive, prospective nature of the national audit data – the inclusion of all sites in the UK (outside Scotland) which are regularly audited against expected case ascertainment from independent administrative/coding data, with an ascertainment of greater than 90\%, is a safeguard against selection bias. The internal validations in the online case record forms used in SSNAP are also a safeguard against missing data and ensure at least 95\% audit compliance, measures of completeness and data quality that have been maintained over 10 years in the audit. By the same token, it is often argued that observational datasets are more susceptible to incomplete adjustment for confounding, but the predictive power of the innovative machine learning methods in this study are demonstrated by the extremely close agreement between the observed and predicted hospital-specific thrombolysis rates, suggesting that no more than 3\% of inter-hospital variation remains unaccounted for once all data are considered by the method. This would make it very unlikely that our observations about the sources of inter-hospital variation in thrombolysis are confounded by some unmeasured variable that is not included in SSNAP but is strongly predictive of the likelihood of thrombolysis – a theoretical variable that has thus far eluded identification despite being so strongly predictive. This work suggests that all-inclusive machine learning methods, using the computing power of massive datasets to evaluate the contributions of a complete range of candidate variables, can offer much greater reassurance against incomplete adjustment than more traditional regression analyses.
+
+Comparisons between outcomes from observational studies and randomised trials are similarly a matter of caution, and what is remarkable in this work is the degree of agreement between the expected benefits of thrombolysis predicted from the original trials and those predicted from analysis of this much larger dataset (over 11 times the size of the trials meta-analysis of Emberson et al.\cite{emberson_effect_2014}) which incorporates a much wider range of eligible patients, particularly with reference to age and pre-stroke disability, who were on average treated much later after onset. This should provide ample reassurance to clinicians that in everyday practice they are conferring as least as much benefit to typical patients as in the more strictly defined and regulated circumstances of the trials from the early 1990s onwards. This observation holds despite the limitation of the current dataset to measurement of disability at hospital discharge, compared to at 90 days in the trials. Although it is known that the two are highly correlated after ischaemic stroke \cite{elhabr_predicting_2021, ovbiagele_disability_2010}, significant proportions of patients do alter their disability status between the two time points (showing improvement and deterioration to similar extents\cite{elhabr_predicting_2021}) and this could introduce ‘noise’ into the analysis. This does not appear to alter the observed relationship, probably because discharge (or 30-day) disability is dominant in terms of predicting medium-term disability, accounting for over two-thirds of the observed variance in 90-day mRS in the Virtual International Stroke Trials Archive dataset\cite{ovbiagele_disability_2010}.
+
+The need to exclude patients who underwent mechanical thrombectomy from our analysis of outcomes may represent a potential limitation, necessary as it was in order to isolate the impact of thrombolysis alone from that of another highly effective reperfusion treatment. Ironically, the slow pace of adoption of thrombectomy particular to the UK has to a large extent insulated our analysis from this confounding effect. Over the time period of our dataset (2016-2021) the proportion of all stroke patients recorded as receiving thrombectomy in SSNAP rose slowly from 0.6\% to 2.0\%, and of course this group represent a highly selected cohort of severely impaired early-presenting patients, mostly with proximal middle cerebral artery occlusions and a median NIHSS of 16 (IQR 11-21; SSNAP Annual Thrombectomy Report 2020-21\cite{sentinel_stroke_national_audit_programme_sentinel_2021}). The removal of these patients, approximately half of whom will also have received thrombolysis, may introduce selection bias, although this is likely to be in a conservative direction in terms of the efficacy of recanalisation. Their exclusion represents a conservative measure designed to enable analysis of the isolated effect of thrombolysis and thereby allow direct comparison with the original randomised trials of alteplase alone.
