--- a/sections/50_appendix.tex
+++ b/sections/50_appendix.tex
@@ -9,7 +9,7 @@ Tables \ref{tab:hospital_stats_1} to \ref{tab:hospital_stats_3} show descriptive
 \small
 \renewcommand{\arraystretch}{1.3}
 \begin{longtable}{p{7cm} p{1cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm}}
-\caption{Descriptive statistics for all patients (n = ?) arriving at each stroke team. The table shows summary statistics across all stroke teams capturing each feature.}\\
+\caption{Descriptive statistics for all patients (n = 360,381) arriving at each stroke team. The table shows summary statistics across all stroke teams capturing each feature.}\\
 \toprule
 \endhead
 Statistic & Stroke teams & mean & Std Dev & min & 25\% & 50\% & 75\% & max\tabularnewline
@@ -47,7 +47,7 @@ Proportion discharged mRS 5-6 & 119 & 0.195 & 0.037 & 0.095 & 0.170 & 0.198 & 0.
 \begin{minipage}{1\textwidth}
 \small
 \begin{longtable}{p{7cm} p{1cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm}}
-\caption{Descriptive statistics for patients (n = ?) arriving within 4 hours of known stroke onset at each stroke team. The table shows summary statistics across all stroke teams capturing each feature.}\\
+\caption{Descriptive statistics for patients (n = 138,946) arriving within 4 hours of known stroke onset at each stroke team. The table shows summary statistics across all stroke teams capturing each feature.}\\
 \toprule
 \endhead
 Statistic & Stroke teams & mean & Std Dev & min & 25\% & 50\% & 75\% & max\tabularnewline
@@ -84,7 +84,7 @@ Proportion discharged mRS 5-6 & 119 & 0.236 & 0.045 & 0.138 & 0.208 & 0.231 & 0.
 \begin{minipage}{1\textwidth}
 \small
 \begin{longtable}{p{7cm} p{1cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm} p{0.8cm}}
-\caption{Descriptive statistics for patients (n = ?) arriving by ambulance within 4 hours of known stroke onset at each stroke team. The table shows summary statistics across all stroke teams capturing each feature.}\\
+\caption{Descriptive statistics for patients (n = 125,557) arriving by ambulance within 4 hours of known stroke onset at each stroke team. The table shows summary statistics across all stroke teams capturing each feature.}\\
 \toprule
 \endhead
 Statistic & Stroke teams & mean & Std Dev & min & 25\% & 50\% & 75\% & max\tabularnewline
