--- a/main.tex
+++ b/main.tex
@@ -75,7 +75,7 @@
 %TC:ignore
 \include{sections/02_abstract}
 %TC:endignore
-\include{sections/03_intro}
+\input{sections/03_intro}
 \input{sections/04_study_pathway}
 \input{sections/06_data}
 \input{sections/05_paper_overview}
